--- a/game.html
+++ b/game.html
@@ -5,11 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+
     <title>Document</title>
 </head>
 
 <body>
     <h1>Guessing Game</h1>
+    <!-- <div class='random'>
+
+    </div> -->
+    <input type="number" class='guessnumber'>
+    <input type="button" value="guess" class="bttn">
+    <div class='message'>
+        ...Show the number entered
+    </div>
+
 </body>
+<script src="index.js"></script>
 
 </html>
