--- a/game.html
+++ b/game.html
@@ -12,13 +12,12 @@
 
 <body>
     <h1>Guessing Game</h1>
-    <!-- <div class='random'>
 
-    </div> -->
     <input type="number" class='guessnumber'>
     <input type="button" value="guess" class="bttn">
     <div class='message'>
-        ...Show the number entered
+
+        <p>...Show the number entered</p>
     </div>
 
 </body>
