--- a/game.html
+++ b/game.html
@@ -12,8 +12,8 @@
 
 <body>
     <h1>Guessing Game</h1>
-
-    <input type="number" class='guessnumber'>
+    <h2>Enter a number between 1 & 100 to see what is the secret number</h2>
+    <input type="number" class='guessnumber'><br><br>
     <input type="button" value="guess" class="bttn">
     <div class='message'>
 
