--- a/GuessingGame/game.html
+++ b/GuessingGame/game.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 
+
     <title>Document</title>
 </head>
 
@@ -22,5 +23,7 @@
 
 </body>
 <script src="index.js"></script>
+<script src="dom.game.js"></script>
+
 
 </html>
